fixing wrap

--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,6 @@ footer{
 section p{
     margin: 0;
 }
+.title{
+    text-align: center;
+}
